--- a/Project/Sample.vcxproj.filters
+++ b/Project/Sample.vcxproj.filters
@@ -84,10 +84,10 @@
     <ClCompile Include="StartTimeCount.cpp">
       <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="Font.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="PlayerJump.cpp">
+      <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuInput.cpp">
       <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
     </ClCompile>
   </ItemGroup>
@@ -140,10 +140,10 @@
     <ClInclude Include="StartTimeCount.h">
       <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Font.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="PlayerJump.h">
+      <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuInput.h">
       <Filter>ソース ファイル\SceneManager\Game\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
